added the color change to the buy page as well (the blue and focus )

--- a/Website Files/buyPage.html
+++ b/Website Files/buyPage.html
@@ -32,23 +32,23 @@
                     <div class="buyerDetails">
                         <label>
                             <div class="inputName">Full Name:</div><input class="wide" type="text" name="name"
-                                placeholder="Enter Your Name" />
+                                placeholder="Enter Your Name" onFocus="focused(this)" onBlur="blurred(this)"/>
                         </label>
 
                         <label>
                             <div class="inputName">Email:</div><input class="wide" type="email" name="email"
-                                placeholder="Enter Your Email" />
+                                placeholder="Enter Your Email" onFocus="focused(this)" onBlur="blurred(this)" />
                         </label>
 
                         <label>
                             <div class="inputName">Password:</div><input class="wide" type="password" name="password"
-                                placeholder="Enter Your Password" />
+                                placeholder="Enter Your Password" onFocus="focused(this)" onBlur="blurred(this)"/>
                         </label>
 
                         <label>
                             <div class="inputName">Confirm Password:</div>
                             <input class="wide" type="password" name="confirmPassword"
-                                placeholder="Re-enter Your Password" />
+                                placeholder="Re-enter Your Password" onFocus="focused(this)" onBlur="blurred(this)" />
                         </label>
 
                         <label>
