added contact us section and images next to the information

--- a/Website Files/index.html
+++ b/Website Files/index.html
@@ -38,8 +38,8 @@
 
                         <label>
                             <div class="inputName">Password:</div><input class="wide" id="loginPassword" name="password"
-                                placeholder="Enter Your password" type="password" name="password"
-                                onFocus="focused(this)" onBlur="blurred(this)" />
+                                placeholder="Enter Your password" type="password" onFocus="focused(this)"
+                                onBlur="blurred(this)" />
                         </label>
                         <label>
                             <div>Remember Me<input type="checkbox" name="Remember Me" /></div>
@@ -96,22 +96,29 @@
                             <input class="shoppingPageBuyButton" type="submit" value="Buy Now"></a>
                     </div>
 
-                    <div id="contactInfo">
-                        <h2>Contact Us:</h2>
+
+                    <div class="ContactPicture">
+
+                        <div><img src="Images\contact Us.jpg" width="300px" height="300px" /></div>
                         <ul>
-                            <li>Email: printerShop@hmail.com</li>
-                            <li>Telephone: 05555555</li>
-                            <li>whatsApp: 05555555</li>
+                            <div class="contactLogo"><img  src="Images\email logo.png" width="50px" /></div><li>Email: printerShop@gmail.com</li>
+                            <div class="contactLogo"><img   src="Images\call logo.png" width="50px" /></div><li> Telephone: 05555555</li>
+                            <div class="contactLogo"><img   src="Images\whtasapp logo.png" width="50px" /></div><li>WhatsApp: 05555555</li>
                         </ul>
+
+
                     </div>
 
-                </div>
-                
-
-
 
                 </div>
-               
+
+
+
+
+
+
+
+
 
 
             </div>
@@ -119,9 +126,12 @@
 
 
 
+
         </div>
         <div id="footer">© Copyright 2021 Abysswalkers Compeny </div>
     </div>
+
+
 </body>
 
 
