added the empty , greater then 6 and checking for numbers to the full name validation and added the needed error message for when user types a number

--- a/Website Files/index.html
+++ b/Website Files/index.html
@@ -28,7 +28,7 @@
                 <div class="loginForm">
                     <h1 class="title">Sign In</h1>
                     <div id='loginMessage'></div>
-                    <form id="indexForm" action="#" method="post">
+                    <form action="#" method="post" onSubmit="return signIn()">
 
                         <label>
                             <div class="inputName">Username:</div><input class="wide" type="text" id="loginUsername"
