--- a/Website Files/form.html
+++ b/Website Files/form.html
@@ -28,13 +28,16 @@
 
             <div class="container">
                 <h1 id="feedbackTitle">Feedback</h1>
+                <div id="feedbackMessage"></div>
 
-                <form action="#" method="post">
+                <form  action="#" method="post" onSubmit="return FeedbackForm()">
                     <div class="buyerDetails">
                         <label>
-                            <div class="inputName">Full Name:</div><input class="wide" type="text" name="name"
-                                placeholder="Enter Your Name" onFocus="focused(this)" onBlur="blurred(this)" />
+                            <div class="inputName">Full Name:</div><input class="wide" type="text" name="name" id="names"
+                                placeholder="Enter Your Name" onFocus="focused(this)" onBlur="blurred(this)" onKeyUp="checkName()"/>
+                                
                         </label>
+                        <div class="keyUpMessage" id="keyUpMessage"></div>
                         <label>
                             <div class="inputName">Phone Number:</div><input class="wide" type="text" name="number"
                                 placeholder="Enter Your  Phone Number" onFocus="focused(this)" onBlur="blurred(this)" />
