added process.php in the action for the forms so when the form is submitted succcfully it changes screen

--- a/Website Files/buyPage.html
+++ b/Website Files/buyPage.html
@@ -28,7 +28,7 @@
             <div class="container">
                 <h1 class="title">Shopping Cart</h1>
 
-                <form action="#" method="post">
+                <form action="process.php" method="post">
                     <div class="buyerDetails">
                         <label>
                             <div class="inputName">Full Name:</div><input class="wide" type="text" name="name"
