--- a/Website Files/form.html
+++ b/Website Files/form.html
@@ -30,7 +30,7 @@
                 <h1 id="feedbackTitle">Feedback</h1>
                 <div id="feedbackMessage"></div>
 
-                <form action="#" method="post" onSubmit="return FeedbackForm()">
+                <form action="process.php" method="post" onSubmit="return FeedbackForm()">
                     <div class="buyerDetails">
                         <label>
                             <div class="inputName">Full Name:</div><input class="wide" type="text" name="name"
