--- a/Website Files/index.html
+++ b/Website Files/index.html
@@ -28,7 +28,7 @@
                 <div class="loginForm">
                     <h1 class="title">Sign In</h1>
                     <div id='loginMessage'></div>
-                    <form action="#" method="post" onSubmit="return signIn()">
+                    <form action="process.php" method="post" onSubmit="return signIn()">
 
                         <label>
                             <div class="inputName">Username:</div><input class="wide" type="text" id="loginUsername"
