changed the number in name error from a div to a span as per dr recommendation

--- a/Website Files/form.html
+++ b/Website Files/form.html
@@ -38,7 +38,7 @@
                                 onKeyUp="isNameNotString()" />
 
                         </label>
-                        <div class="keyUpMessage" id="keyUpMessage"></div>
+                        <span class="keyUpMessage" id="keyUpMessage"></span>
                         <label>
                             <div class="inputName">Phone Number:</div><input class="wide" type="text" name="number"
                                 id="phoneNumber" placeholder="Enter Your  Phone Number" onFocus="focused(this)"
