validated the Shopping page Email
finished validating the Shopping Page Email validation

--- a/Website Files/buyPage.html
+++ b/Website Files/buyPage.html
@@ -39,7 +39,7 @@
                         </label>
 
                         <label>
-                            <div class="inputName">Email:</div><input class="wide" type="email" name="email"
+                            <div class="inputName">Email:</div><input class="wide" type="email" name="email" id="ShoppingEmail"
                                 placeholder="Enter Your Email" onFocus="focused(this)" onBlur="blurred(this)" />
                         </label>
 
