finished validating the Shopping Page Password

--- a/Website Files/buyPage.html
+++ b/Website Files/buyPage.html
@@ -44,7 +44,7 @@
                         </label>
 
                         <label>
-                            <div class="inputName">Password:</div><input class="wide" type="password" name="password"
+                            <div class="inputName">Password:</div><input class="wide" type="password" name="password" id="ShoppingPass"
                                 placeholder="Enter Your Password" onFocus="focused(this)" onBlur="blurred(this)"/>
                         </label>
 
