--- a/Website Files/buyPage.html
+++ b/Website Files/buyPage.html
@@ -55,7 +55,8 @@
                         </label>
 
                         <label>
-                            <div class="inputName">Choose A Printer:</div><select name="printer">
+                            <div class="inputName">Choose A Printer:</div>
+							<select id="Printer">
                                 <option value="" disabled selected="selected">Select A Printer-- </option>
                                 <option>Epson EcoTank L805 6-color Color Inkjet Printer 1549SR</option>
                                 <option>HP Neverstop Laser 1000w Monochrome (Black) Laser Printer 1099SR</option>
@@ -85,7 +86,7 @@
 
                         <label>
                             <div class="inputName">Choose Your City:</div>
-                            <select class="wide" name="city">
+                            <select class="wide" name="city" id="City">
                                 <option class="wide" value=" " disabled selected="selected">Choose Your City--</option>
                                 <option>Makkah</option>
                                 <option>Madina</option>
