separated the onKeyUp massage
before this change the onKeyUp massage of the Shopping page was displayed in the upper notifying lable,
right now it is consistent with the feedback page

--- a/Website Files/buyPage.html
+++ b/Website Files/buyPage.html
@@ -36,7 +36,9 @@
                             <div class="inputName">Full Name:</div><input class="wide" type="text" name="ShoppingName" id="ShoppingName"
                                 placeholder="Enter Your Name" onFocus="focused(this)" onBlur="blurred(this)" 
 								onkeyup ="isShoppingNameString()" />
+
                         </label>
+								<span class="ShoppingkeyUpMessage" id="ShoppingkeyUpMessage"></span>
 
                         <label>
                             <div class="inputName">Email:</div><input class="wide" type="email" name="email" id="ShoppingEmail"
