removed email field and made it a text field so our custom tests work on it and added the regex the dr provided for us

--- a/Website Files/buyPage.html
+++ b/Website Files/buyPage.html
@@ -41,7 +41,7 @@
 								<span class="ShoppingkeyUpMessage" id="ShoppingkeyUpMessage"></span>
 
                         <label>
-                            <div class="inputName">Email:</div><input class="wide" type="email" name="email" id="ShoppingEmail"
+                            <div class="inputName">Email:</div><input class="wide" type="text" name="email" id="ShoppingEmail"
                                 placeholder="Enter Your Email" onFocus="focused(this)" onBlur="blurred(this)" />
                         </label>
 
