--- a/Website Files/form.html
+++ b/Website Files/form.html
@@ -47,7 +47,7 @@
 
 
                         <label>
-                            <div class="inputName">Email:</div><input class="wide" type="email" name="email" id="feedbackEmail"
+                            <div class="inputName">Email:</div><input class="wide" type="text" name="email" id="feedbackEmail"
                                 placeholder="Enter Your Email" onFocus="focused(this)" onBlur="blurred(this)" />
                         </label>
 
